@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.50
-releasedate		20050209
+releasedate		20050210
 
 ##############################################################################
 # host dependent configuration
