@@ -1,3 +1,10 @@
+02/10/2005
+----------
+1. fix several type errors that unknown was typed as unknow
+   (thanks to Kelson Vibber, kelson.AT.speed.net)
+2. clean code of error messages
+
+
 02/09/2005
 ----------
 1. Deutsch template files translation minor update
